--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Uber+Move&display=swap" rel="stylesheet" /><link href="./css/main.css" rel="stylesheet" /><title>Document</title></head><body><div class="v2_2"><div class="v44_409"></div><div class="v17_4"></div><div class="v57_4"></div><span class="v57_5">Welcome to UBus</span><div class="v57_8"><div class="v57_13"><div class="v57_6"></div><div class="v57_20"><span class="v57_10">Sign in</span><div class="v57_18"><div class="v57_19"></div></div></div></div><div class="v57_12"><div class="v57_7"></div><div class="v57_17"><span class="v57_11">Sign up</span><div class="v57_14"><div class="v57_15"></div></div></div></div></div><div class="v147_926"><span class="v2_4">UBus</span><span class="v67_2">Smart Travel Made Simple</span></div><div class="v93_1068"><div class="name"></div><div class="name"></div></div></div></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Uber+Move&display=swap" rel="stylesheet" />
+        <link href="./css/main.css" rel="stylesheet" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="v2_2">
+            <div class="v44_409">
+
+            </div>
+            <div class="v17_4">
+
+            </div>
+            <div class="v57_4">
+
+            </div>
+            <span class="v57_5">Welcome to UBus</span>
+            <div class="v57_8">
+                <div class="v57_13">
+                    <div class="v57_6">
+
+                    </div>
+                    <div class="v57_20">
+                        <span class="v57_10">Sign in</span>
+                        <div class="v57_18">
+                            <div class="v57_19">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="v57_12">
+                    <div class="v57_7">
+
+                    </div>
+                    <div class="v57_17">
+                        <span class="v57_11">Sign up</span>
+                        <div class="v57_14">
+                            <div class="v57_15">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="v147_926">
+                <span class="v2_4">UBus</span>
+                <span class="v67_2">Smart Travel Made Simple</span>
+            </div>
+            <div class="v93_1068">
+                <div class="name">
+
+                </div>
+                <div class="name">
+
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
