--- a/ticket.html
+++ b/ticket.html
@@ -15,7 +15,7 @@
             }
         </style>
        
-        <title>Document</title>
+        <title>UBus Ticket</title>
     </head>
     <body>
         <div class="w3-bar w3-green">
